# rust-algebra

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
benches/: add.rs  and.rs  dlist.rs  fst.rs  max.rs  min.rs  mul.rs  option.rs  or.rs  ordering.rs  product.rs  ringbuf.rs  snd.rs  string.rs  sum.rs  swap.rs  unit.rs  vec.rs
doc/: search-index.js
doc/algebra/: index.html  stability.html  stability.json
doc/algebra/magma/: index.html
doc/algebra/monoid/: index.html
doc/algebra/semigroup/: index.html
doc/algebra/structure/: index.html
src/: lib.rs
src/magma/: mod.rs  theory.rs
src/magma/model/: add.rs  and.rs  dlist.rs  fst.rs  max.rs  min.rs  mod.rs  mul.rs  option.rs  or.rs  ordering.rs  product.rs  ringbuf.rs  snd.rs  string.rs  sum.rs  swap.rs  unit.rs  vec.rs
src/monoid/: mod.rs  theory.rs
src/monoid/model/: add.rs  and.rs  dlist.rs  max.rs  min.rs  mod.rs  mul.rs  option.rs  or.rs  ordering.rs  product.rs  ringbuf.rs  string.rs  swap.rs  unit.rs  vec.rs
src/semigroup/: add.rs  and.rs  core.rs  dlist.rs  fst.rs  max.rs  min.rs  mod.rs  mul.rs  option.rs  or.rs  ordering.rs  product.rs  ringbuf.rs  snd.rs  string.rs  sum.rs  swap.rs  theory.rs  unit.rs  vec.rs
src/semigroup/model/: add.rs  and.rs  dlist.rs  fst.rs  max.rs  min.rs  (+12 more)
src/structure/: add.rs  and.rs  fst.rs  max.rs  min.rs  mod.rs  mul.rs  or.rs  snd.rs  swap.rs
src/util/: mod.rs  ordering.rs
tests/: add.rs  and.rs  dlist.rs  fst.rs  max.rs  min.rs  mul.rs  option.rs  or.rs  ordering.rs  product.rs  ringbuf.rs  snd.rs  string.rs  sum.rs  swap.rs  unit.rs  vec.rs
(+162 files in other folders)
